basedriver and conftest added

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,6 @@
 [pytest]
 addopts = -vs --html=reports/pytest-html-report.html --self-contained-html
+
+[browser]
+browser_type = chrome
+URL = https://demo.nopcommerce.com/
